--- a/docs/tutorials/Part2_Qiskit_Runtime_EXERCISE.ipynb
+++ b/docs/tutorials/Part2_Qiskit_Runtime_EXERCISE.ipynb
@@ -640,10 +640,18 @@
    "source": [
     "# ! Exercise !\n",
     "\n",
+    "\n",
     "1. Open a Qiskit Runtime session with the `Estimator` context manager.\n",
     "2. Make multiple requests to the `estimator` primitive within the session.\n",
     "    * The parameter values of a request is based on the previous one.\n",
-    "    * The loop ends when a target is achieved."
+    "    * The loop ends when a target is achieved.\n",
+    "    \n",
+    "    \n",
+    "**Hint:** \n",
+    "\n",
+    "You can find the `Estimator` API [here](https://qiskit.org/documentation/partners/qiskit_ibm_runtime/stubs/qiskit_ibm_runtime.Estimator.html#qiskit_ibm_runtime.Estimator). \n",
+    "\n",
+    "And a tutorial [here](https://qiskit.org/documentation/partners/qiskit_ibm_runtime/tutorials/how-to-getting-started-with-estimator.html)."
    ]
   },
   {
